# Rozprochy

Lab1/: CMakeLists.txt  main  main.c
Lab10/: main.py
Lab2/: CMakeLists.txt  main.c  math.c
Lab3/: CMakeLists.txt  main.c
Lab4/: CMakeLists.txt  child_process.c  main.c
Lab5/: main.c
Lab6/: klient.py  serwer.py
Lab7/: main.py
Lab8/: main.py
Lab9/: main.py
